--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="uk">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,500;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
-</head>
-   <body>
-    
-</body>
+  </head>
+  <body>
+    <header class="heder">
+      <!-- navigaion -->
+      <nav class="menu">
+        <a href="index.html" class="menu-link">beauty та здоров'я</a>
+        <ul class="menu-list">
+          <li class="menu-list">напрямки</li>
+          <li class="menu-list">продукція</li>
+          <li class="menu-list">перемоги</li>
+          <li class="menu-list">відгуки</li>
+          <li class="menu-list"></li>
+        </ul>
+        <address>
+          <a href="tel:80974818226">+380974818226</a>
+          <a href="mailto:kapillar@ukr.net">напиши листа</a>
+        </address>
+      </nav>
+    </header>
+
+    <!-- section title -->
+
+    <!-- section - 2 product -->
+
+    <!-- section -3 cleaning means-->
+    <section class="cleaning">
+      <h2 class="cleaning-title">Миючі засоби</h2>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </section>
+    <footer></footer>
+  </body>
 </html>
